--- a/client/src/app/components/dash-board/dash-board.component.html
+++ b/client/src/app/components/dash-board/dash-board.component.html
@@ -1,2 +1,7 @@
 <p>dash-board works!</p>
+<button routerLink="/dashboard/clients">Clients</button>
+<button routerLink="/dashboard/fixes">Fixes</button>
+<button routerLink="/dashboard/phones">Phones</button>
+<router-outlet></router-outlet>
+
 
