--- a/client/src/app/components/dash-board/dash-board.component.html
+++ b/client/src/app/components/dash-board/dash-board.component.html
@@ -2,6 +2,8 @@
 <button routerLink="/dashboard/clients">Clients</button>
 <button routerLink="/dashboard/newclient">New Client</button>
 <button routerLink="/dashboard/newphone">New Phone</button>
+<button routerLink="/dashboard/newfix">New Fix</button>
+
 <router-outlet></router-outlet>
 
 
