--- a/client/src/app/components/dash-board/dash-board.component.html
+++ b/client/src/app/components/dash-board/dash-board.component.html
@@ -1,5 +1,6 @@
 <p>dash-board works!</p>
 <button routerLink="/dashboard/clients">Clients</button>
+<button routerLink="/dashboard/fixes">Fixes</button>
 <button routerLink="/dashboard/newclient">New Client</button>
 <button routerLink="/dashboard/newphone">New Phone</button>
 <button routerLink="/dashboard/newfix">New Fix</button>
